Update .po files

--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-19 12:10+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-05-12 08:42+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -276,14 +276,21 @@ msgstr "将来的には他のレイアウトタイプを導入する可能性が
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:102
-msgid "You may call it without any parameter to use the interactive mode: `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
+#, fuzzy
+#| msgid "You may call it without any parameter to use the interactive mode: `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
+msgid "You may call it without any parameter to use the interactive mode: `mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
 msgstr "パラメータなしで呼び出してインタラクティブモードを使用することができます。`mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:109
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "$ mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N \\\n"
+#| "    -DgroupId=org.acme \\ #<1>\n"
+#| "    -DextensionId=greeting-extension \\  #<2>\n"
+#| "    -DwithoutTests #<3>\n"
 msgid ""
-"$ mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N \\\n"
+"$ mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N \\\n"
 "    -DgroupId=org.acme \\ #<1>\n"
 "    -DextensionId=greeting-extension \\  #<2>\n"
 "    -DwithoutTests #<3>\n"
@@ -1621,9 +1628,15 @@ msgstr "次に、別のディレクトリから、我々のツールを使用し
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:724
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+#| "     -DprojectGroupId=org.acme \\\n"
+#| "     -DprojectArtifactId=greeting-app \\\n"
+#| "     -Dextensions=\"org.acme:greeting-extension:1.0.0-SNAPSHOT\" \\\n"
+#| "     -DnoExamples\n"
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "     -DprojectGroupId=org.acme \\\n"
 "     -DprojectArtifactId=greeting-app \\\n"
 "     -Dextensions=\"org.acme:greeting-extension:1.0.0-SNAPSHOT\" \\\n"
