--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2020,75 +2020,131 @@ msgid "As a test annotated with `@QuarkusIntegrationTest` tests the result of th
 msgstr "`@QuarkusIntegrationTest` はビルドの結果をテストするため、統合テストスイートの一部として実行する必要があります。すなわち、Mavenを使用している場合は `maven-failsafe-plugin` 、Gradleを使用している場合は追加のタスクを介して実行します。これらのテストは、 `@QuarkusTest` と同じフェーズで実行すると、Quarkusがまだ最終的なアーティファクトを作成していないため、機能し *ませ*ん。"
 
 #. type: Title ==
-#: upstream/_guides/getting-started-testing.adoc:1155
+#: upstream/_guides/getting-started-testing.adoc:1154
+#, no-wrap
+msgid "Mixing `@QuarkusTest` with other type of tests"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/getting-started-testing.adoc:1159
+msgid "Mixing tests annotated with `@QuarkusTest` with tests annotated with either `@QuarkusDevModeTest`, `@QuarkusProdModeTest` or `@QuarkusUnitTest` is not allowed in a single execution run (in a single Maven Surefire Plugin execution, for instance), while the latter three can coexist."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/getting-started-testing.adoc:1162
+msgid "The reason of this restriction is that `@QuarkusTest` starts a Quarkus server for the whole lifetime of the tests execution run, thus preventing the other tests to start their own Quarkus server."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/getting-started-testing.adoc:1165
+msgid "To alleviate this restriction, the `@QuarkusTest` annotation defines a JUnit 5 `@Tag`: `io.quarkus.test.junit.QuarkusTest`.  You can use this tag to isolate the `@QuarkusTest` test in a specific execution run, for example with the Maven Surefire Plugin:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/getting-started-testing.adoc:1197
+#, no-wrap
+msgid ""
+"<plugin>\n"
+"    <artifactId>maven-surefire-plugin</artifactId>\n"
+"    <version>${surefire-plugin.version}</version>\n"
+"    <executions>\n"
+"        <execution>\n"
+"            <id>default-test</id>\n"
+"            <goals>\n"
+"                <goal>test</goal>\n"
+"            </goals>\n"
+"            <configuration>\n"
+"                <excludedGroups>io.quarkus.test.junit.QuarkusTest</excludedGroups>\n"
+"            </configuration>\n"
+"        </execution>\n"
+"        <execution>\n"
+"            <id>quarkus-test</id>\n"
+"            <goals>\n"
+"                <goal>test</goal>\n"
+"            </goals>\n"
+"            <configuration>\n"
+"                <groups>io.quarkus.test.junit.QuarkusTest</groups>\n"
+"            </configuration>\n"
+"        </execution>\n"
+"    </executions>\n"
+"    <configuration>\n"
+"        <systemProperties>\n"
+"            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>\n"
+"        </systemProperties>\n"
+"    </configuration>\n"
+"</plugin>\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_guides/getting-started-testing.adoc:1200
 #, no-wrap
 msgid "Running `@QuarkusTest` from an IDE"
 msgstr "IDE から `@QuarkusTest`  を実行する"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1158
+#: upstream/_guides/getting-started-testing.adoc:1203
 #, fuzzy
 #| msgid "Most IDEs offer the possibility to run a selected class as JUnit test directly. For this you should set a few properties in the settings of your chosen IDE:"
 msgid "Most IDEs offer the possibility to run a selected class as a JUnit test directly. For this you should set a few properties in the settings of your chosen IDE:"
 msgstr "ほとんどの IDE では、選択したクラスを JUnit テストとして直接実行できるようになっています。そのためには、選択した IDE の設定でいくつかのプロパティーを設定する必要があります。"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1160
+#: upstream/_guides/getting-started-testing.adoc:1205
 msgid "`java.util.logging.manager` (see link:logging[Logging Guide])"
 msgstr "`java.util.logging.manager`  (ロ link:logging[ギングガイド]を参照)"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1162
+#: upstream/_guides/getting-started-testing.adoc:1207
 #, fuzzy
 msgid "`maven.home` (only if there are any custom settings in `${maven.home}/conf/settings.xml`, see link:maven-tooling[Maven Guide])"
 msgstr "`maven.home` ( `${maven.home}/conf/settings.xml` にカスタム設定がある場合のみ、 link:maven-tooling[Mavenガイドを] 参照してください)"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1164
+#: upstream/_guides/getting-started-testing.adoc:1209
 msgid "`maven.settings` (in case a custom version of `settings.xml` file should be used for the tests)"
 msgstr "`maven.settings`  (カスタム版の `settings.xml`  ファイルをテストに使用する場合)"
 
 #. type: Title ===
-#: upstream/_guides/getting-started-testing.adoc:1165
+#: upstream/_guides/getting-started-testing.adoc:1210
 #, fuzzy, no-wrap
 msgid "Eclipse separate JRE definition"
 msgstr "Eclipse別のJREの定義"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1168
+#: upstream/_guides/getting-started-testing.adoc:1213
 msgid "Copy your current \"Installed JRE\" definition into a new one, where you will add the properties as a new VM arguments:"
 msgstr "現在の\"Installed JRE\"定義を新しい定義にコピーし、新しいVMの引数としてプロパティーを追加します:"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1170
+#: upstream/_guides/getting-started-testing.adoc:1215
 msgid "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1172
+#: upstream/_guides/getting-started-testing.adoc:1217
 msgid "`-Dmaven.home=<path-to-your-maven-installation>`"
 msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation&amp;gt;`"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1174
+#: upstream/_guides/getting-started-testing.adoc:1219
 msgid "Use this JRE definition as your Quarkus project targeted runtime and the workaround will be applied to any \"Run as JUnit\" configuration."
 msgstr "このJRE定義をQuarkusプロジェクトのターゲットランタイムとして使用すると、「Run as JUnit」設定に回避策が適用されます。"
 
 #. type: Title ===
-#: upstream/_guides/getting-started-testing.adoc:1175
+#: upstream/_guides/getting-started-testing.adoc:1220
 #, no-wrap
 msgid "VSCode \"run with\" configuration"
 msgstr "VSCode \"run with\" 設定"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1178
+#: upstream/_guides/getting-started-testing.adoc:1223
 #, fuzzy
 #| msgid "The `settings.json` placed in the root of your project directory or in the workspace will need the workaround in your test configuration:"
 msgid "The `settings.json` placed in the root of your project directory or in the workspace will need the following workaround in your test configuration:"
 msgstr "プロジェクトディレクトリーやワークスペースのルートにある `settings.json`  は、テスト設定で回避策が必要です。"
 
 #. type: delimited block -
-#: upstream/_guides/getting-started-testing.adoc:1188
+#: upstream/_guides/getting-started-testing.adoc:1233
 #, no-wrap
 msgid ""
 "\"java.test.config\": [\n"
@@ -2102,13 +2158,13 @@ msgid ""
 msgstr ""
 
 #. type: Title ===
-#: upstream/_guides/getting-started-testing.adoc:1190
+#: upstream/_guides/getting-started-testing.adoc:1235
 #, fuzzy, no-wrap
 msgid "IntelliJ JUnit template"
 msgstr "IntelliJ JUnit テンプレート"
 
 #. type: Plain text
-#: upstream/_guides/getting-started-testing.adoc:1192
+#: upstream/_guides/getting-started-testing.adoc:1237
 msgid "Nothing needed in IntelliJ because the IDE will pick the `systemPropertyVariables` from the surefire plugin configuration in `pom.xml`."
 msgstr "IntelliJでは何も必要ありません。なぜなら、IDEは `systemPropertyVariables` を `pom.xml`のsurefireプラグイン設定から取得するからです。"
 
