--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-14 14:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -208,7 +208,7 @@ msgstr "まず、温度値プロデューサを持つ新しいプロジェクト
 #: upstream/_guides/kafka-streams.adoc:93
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-streams-quickstart-producer \\\n"
 "    -Dextensions=\"kafka\" \\\n"
@@ -486,7 +486,7 @@ msgstr "プロデューサアプリケーションを用意したら、Kafka Str
 #: upstream/_guides/kafka-streams.adoc:245
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-streams-quickstart-aggregator \\\n"
 "    -Dextensions=\"resteasy,kafka-streams,resteasy-jackson\" \\\n"
