--- a/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,7 +64,7 @@ msgstr "ご覧のように、私たちのエンティティーはシンプルな
 #, no-wrap
 msgid ""
 "class Person : PanacheMongoEntity() {\n"
-"    companion object: PanacheCompanion<Person> {  // <1>\n"
+"    companion object: PanacheMongoCompanion<Person> {  // <1>\n"
 "        fun findByName(name: String) = find(\"name\", name).firstResult()\n"
 "        fun findAlive() = list(\"status\", Status.Alive)\n"
 "        fun deleteStefs() = delete(\"name\", \"Stef\")\n"
