--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-14 14:58+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -104,7 +104,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/rest-client.adoc:46
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=rest-client-quickstart \\\n"
 "    -DclassName=\"org.acme.rest.client.CountriesResource\" \\\n"
@@ -815,11 +815,9 @@ msgid "And the `RequestUUIDHeaderFactory` would look like:"
 msgstr "そして、 `RequestUUIDHeaderFactory` は次のようになります。"
 
 #. type: delimited block -
-#: upstream/_guides/rest-client.adoc:541
+#: upstream/_guides/rest-client.adoc:540
 #, no-wrap
-msgid ""
-"import org.eclipse.microprofile.rest.client.ext.ClientHeadersFactory;\n"
-"import org.jboss.resteasy.specimpl.MultivaluedMapImpl;\n"
+msgid "import org.eclipse.microprofile.rest.client.ext.ClientHeadersFactory;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -827,6 +825,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "import javax.enterprise.context.ApplicationScoped;\n"
+"import javax.ws.rs.core.MultivaluedHashMap;\n"
 "import javax.ws.rs.core.MultivaluedMap;\n"
 "import java.util.UUID;\n"
 msgstr ""
@@ -845,7 +844,7 @@ msgstr ""
 msgid ""
 "    @Override\n"
 "    public MultivaluedMap<String, String> update(MultivaluedMap<String, String> incomingHeaders, MultivaluedMap<String, String> clientOutgoingHeaders) {\n"
-"        MultivaluedMap<String, String> result = new MultivaluedMapImpl<>();\n"
+"        MultivaluedMap<String, String> result = new MultivaluedHashMap<>();\n"
 "        result.add(\"X-request-uuid\", UUID.randomUUID().toString());\n"
 "        return result;\n"
 "    }\n"
