--- a/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-09 20:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -120,7 +120,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/smallrye-fault-tolerance.adoc:58
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=microprofile-fault-tolerance-quickstart \\\n"
 "    -DclassName=\"org.acme.microprofile.faulttolerance.CoffeeResource\" \\\n"
