--- a/l10n/po/ja_JP/_guides/amazon-ses.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-ses.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-25 22:47+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -240,7 +240,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/amazon-ses.adoc:111
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=amazon-ses-quickstart \\\n"
 "    -DclassName=\"org.acme.ses.QuarkusSesSyncResource\" \\\n"
