--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:12+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-24 10:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -208,7 +208,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/amazon-sns.adoc:99
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=amazon-sns-quickstart \\\n"
 "    -DclassName=\"org.acme.sns.QuarksCannonSyncResource\" \\\n"
