--- a/l10n/po/ja_JP/_guides/deploying-to-heroku.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-heroku.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-13 14:09+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-07-13 18:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -162,7 +162,7 @@ msgstr "あるいは、新しいプロジェクトを立ち上げることもで
 #: upstream/_guides/deploying-to-heroku.adoc:64
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=code-with-quarkus-on-heroku \\\n"
 "    -DclassName=\"org.acme.getting.started.GreetingResource\" \\\n"
