--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-05-18 08:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -121,7 +121,7 @@ msgstr "`quarkus-funqy-google-cloud-functions` のエクステンションを持
 #| "    -Dpath=\"/hello\" \\\n"
 #| "    -Dextensions=\"resteasy,funqy-google-cloud-functions\"\n"
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=funqy-google-cloud-functions \\\n"
 "    -DclassName=\"org.acme.quickstart.GreetingResource\" \\\n"
