--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-22 09:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:12+0000\n"
 "PO-Revision-Date: 2021-07-30 17:18+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -45,7 +45,7 @@ msgstr "Gradleプロジェクトをスキャフォールドにする最も簡単
 #: upstream/_guides/gradle-tooling.adoc:29
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=my-groupId \\\n"
 "    -DprojectArtifactId=my-artifactId \\\n"
 "    -DprojectVersion=my-version \\\n"
@@ -56,7 +56,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:33
-msgid "If you just launch `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create` the Maven plugin asks for user inputs. You can disable (and use default values) this interactive mode by passing `-B` to the Maven command."
+#, fuzzy
+#| msgid "If you just launch `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create` the Maven plugin asks for user inputs. You can disable (and use default values) this interactive mode by passing `-B` to the Maven command."
+msgid "If you just launch `mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create` the Maven plugin asks for user inputs. You can disable (and use default values) this interactive mode by passing `-B` to the Maven command."
 msgstr "`mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create`  を起動するだけで、Maven プラグインはユーザー入力を要求します。 `-B`  を Maven コマンドに渡すことで、この対話型モードを無効にすることができます (デフォルト値を使用します)。"
 
 #. type: delimited block =
@@ -740,20 +742,24 @@ msgid ""
 "tasks.quarkusBuild {\n"
 "    nativeArgs {\n"
 "        \"container-build\" to true <1>\n"
-"        \"buildImage\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
-"        \"quarkus.native.java-home\" to \"/opt/java-11/\"\n"
+"        \"build-image\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
+"        \"java-home\" to \"/opt/java-11/\"\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:391
-msgid "Set `quarkus.native.containerBuild` property to `true`"
+#, fuzzy
+#| msgid "Set `quarkus.native.containerBuild` property to `true`"
+msgid "Set `quarkus.native.container-build` property to `true`"
 msgstr "`quarkus.native.containerBuild`  プロパティーを `true`"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:392
-msgid "Set `quarkus.native.buildImage` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
+#, fuzzy
+#| msgid "Set `quarkus.native.buildImage` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
+msgid "Set `quarkus.native.build-image` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
 msgstr "`quarkus.native.buildImage`  プロパティーを `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
 
 #. type: delimited block =
