--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-11 13:16+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-14 21:03+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -221,7 +221,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/kogito.adoc:94
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kogito-quickstart \\\n"
 "    -Dextensions=\"kogito\" \\\n"
