--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-04 11:00+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -88,7 +88,7 @@ msgstr "まず、新しいKotlinプロジェクトが必要です。これは以
 #: upstream/_guides/kotlin.adoc:41
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=rest-kotlin-quickstart \\\n"
 "    -DclassName=\"org.acme.rest.GreetingResource\" \\\n"
