--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:12+0000\n"
 "PO-Revision-Date: 2021-04-30 17:37+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -144,7 +144,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/micrometer.adoc:72
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=micrometer-quickstart \\\n"
 "    -DclassName=\"org.acme.micrometer.ExampleResource\" \\\n"
