--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:12+0000\n"
 "PO-Revision-Date: 2021-07-20 16:23+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -113,7 +113,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/opentracing.adoc:51
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=opentracing-quickstart \\\n"
 "    -DclassName=\"org.acme.opentracing.TracedResource\" \\\n"
