--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-11 13:16+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-03-31 00:18+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -162,7 +162,7 @@ msgstr "まず、プロジェクトで `quarkus-reactive-pg-client` のエクス
 #: upstream/_guides/reactive-sql-clients.adoc:75
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=reactive-pg-client-quickstart \\\n"
 "    -DclassName=\"org.acme.vertx.FruitResource\" \\\n"
