--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-21 15:06+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -125,7 +125,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/redis.adoc:54
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=redis-quickstart \\\n"
 "    -Dextensions=\"redis-client,resteasy-jackson,resteasy-mutiny\" \\\n"
