--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -107,7 +107,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/rest-client-reactive.adoc:47
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=rest-client-reactive-quickstart \\\n"
 "    -DclassName=\"org.acme.rest.client.CountriesResource\" \\\n"
@@ -869,11 +869,9 @@ msgid "And the `RequestUUIDHeaderFactory` would look like:"
 msgstr "そして、 `RequestUUIDHeaderFactory` は次のようになります。"
 
 #. type: delimited block -
-#: upstream/_guides/rest-client-reactive.adoc:521
+#: upstream/_guides/rest-client-reactive.adoc:520
 #, no-wrap
-msgid ""
-"import org.eclipse.microprofile.rest.client.ext.ClientHeadersFactory;\n"
-"import org.jboss.resteasy.specimpl.MultivaluedMapImpl;\n"
+msgid "import org.eclipse.microprofile.rest.client.ext.ClientHeadersFactory;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -881,6 +879,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "import javax.enterprise.context.ApplicationScoped;\n"
+"import javax.ws.rs.core.MultivaluedHashMap;\n"
 "import javax.ws.rs.core.MultivaluedMap;\n"
 "import java.util.UUID;\n"
 msgstr ""
@@ -899,7 +898,7 @@ msgstr ""
 msgid ""
 "    @Override\n"
 "    public MultivaluedMap<String, String> update(MultivaluedMap<String, String> incomingHeaders, MultivaluedMap<String, String> clientOutgoingHeaders) {\n"
-"        MultivaluedMap<String, String> result = new MultivaluedMapImpl<>();\n"
+"        MultivaluedMap<String, String> result = new MultivaluedHashMap<>();\n"
 "        result.add(\"X-request-uuid\", UUID.randomUUID().toString());\n"
 "        return result;\n"
 "    }\n"
