--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-07-20 15:42+0900\n"
 "Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
@@ -118,7 +118,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/scheduler.adoc:53
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=scheduler-quickstart \\\n"
 "    -DclassName=\"org.acme.scheduler.CountResource\" \\\n"
