--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-13 17:14+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-13 23:32+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -149,7 +149,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:59
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=security-openid-connect-multi-tenancy-quickstart \\\n"
 "    -Dextensions=\"oidc,resteasy-jackson\" \\\n"
