--- a/l10n/po/ja_JP/_guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_guides/tika.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-03-07 00:13+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -132,9 +132,17 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:66
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+#| "    -DprojectGroupId=org.acme.example \\\n"
+#| "    -DprojectArtifactId=tika-quickstart \\\n"
+#| "    -DclassName=\"org.acme.tika.TikaParserResource\" \\\n"
+#| "    -Dpath=\"/parse\" \\\n"
+#| "    -Dextensions=\"tika,resteasy\"\n"
+#| "cd tika-quickstart\n"
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme.example \\\n"
 "    -DprojectArtifactId=tika-quickstart \\\n"
 "    -DclassName=\"org.acme.tika.TikaParserResource\" \\\n"
