--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-26 14:11+0000\n"
 "PO-Revision-Date: 2021-04-04 21:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -440,7 +440,7 @@ msgstr "秘密の設定でQuarkusアプリケーションを作成する"
 #: upstream/_guides/vault.adoc:251
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=vault-quickstart \\\n"
 "    -DclassName=\"org.acme.quickstart.GreetingResource\" \\\n"
