Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-08-28 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -525,7 +525,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:262
-msgid "For every Kafka _record_ from the `quote-requests` topic, Reactive Messagins calls the `process` method, and sends the returned `Quote` object to the `quotes` channel.  As with the previous example, we need to configure the connectors in the `application.properties` file, to map the `requests` and `quotes` channels to Kafka topics:"
+msgid "For every Kafka _record_ from the `quote-requests` topic, Reactive Messaging calls the `process` method, and sends the returned `Quote` object to the `quotes` channel.  As with the previous example, we need to configure the connectors in the `application.properties` file, to map the `requests` and `quotes` channels to Kafka topics:"
 msgstr ""
 
 #. type: delimited block -
