--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-21 02:20+0000\n"
+"POT-Creation-Date: 2021-08-28 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -84,7 +84,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:39
-msgid "Now open the main Dev UI page and you will see the `OpenId Connect Card` linking to a `Keycloak` page:"
+msgid "Now open the main link:http://localhost:8080/q/dev[Dev UI page] and you will see the `OpenId Connect Card` linking to a `Keycloak` page:"
 msgstr ""
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
