Update .po files

--- a/l10n/po/ja_JP/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-31 13:16+0000\n"
+"POT-Creation-Date: 2021-09-01 07:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -190,7 +190,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:65
-msgid "A blog post explaining it all is coming shortly and we will update this announcement as soon as it is published."
+msgid "You can learn more about it in link:/blog/using-lra[the dedicated blog post]."
 msgstr ""
 
 #. type: Title ===
