Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-21 02:18+0000\n"
+"POT-Creation-Date: 2021-09-03 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,6 +58,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:35
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:99
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:117
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:155
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:164
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:173
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:184
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -133,7 +137,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:58
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:79
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:148
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:149
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -267,5 +271,55 @@ msgid ""
 "--\n"
 "Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. \n"
 " By default, the health check includes all configured data sources (if it is enabled).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:154
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.username]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.username[quarkus.datasource.\"datasource-name\".username]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource username\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:163
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.password]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.password[quarkus.datasource.\"datasource-name\".password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource password\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:172
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider[quarkus.datasource.\"datasource-name\".credentials-provider]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The credentials provider name\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:183
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider-name[quarkus.datasource.\"datasource-name\".credentials-provider-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The credentials provider bean name. \n"
+" It is the `&++#++64;Named` value of the credentials provider bean. It is used to discriminate if multiple CredentialsProvider beans are available. \n"
+" For Vault it is: vault-credentials-provider. Not necessary if there is only one credentials provider available.\n"
 "--"
 msgstr ""
