--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-01 02:19+0000\n"
+"POT-Creation-Date: 2021-09-03 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The migrate at start flag\n"
 "--"
 msgstr ""
 
@@ -61,7 +61,6 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc:20
-#: upstream/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc:29
 #: upstream/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc:38
 #, no-wrap
 msgid "`false`"
@@ -75,8 +74,14 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The validate on update flag\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-config.adoc:29
+#, no-wrap
+msgid "`true`"
 msgstr ""
 
 #. type: Table
@@ -87,7 +92,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The clean at start flag\n"
 "--"
 msgstr ""
 
@@ -99,7 +104,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The list of contexts\n"
 "--"
 msgstr ""
 
@@ -118,7 +123,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The list of labels\n"
 "--"
 msgstr ""
 
@@ -130,7 +135,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The default catalog name\n"
 "--"
 msgstr ""
 
@@ -152,7 +157,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The default schema name\n"
 "--"
 msgstr ""
 
@@ -164,7 +169,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables catalog name\n"
 "--"
 msgstr ""
 
@@ -176,7 +181,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables schema name\n"
 "--"
 msgstr ""
 
@@ -188,7 +193,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables tablespace name\n"
 "--"
 msgstr ""
 
@@ -200,7 +205,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The parameters to be passed to the changelog. Defined as key value pairs.\n"
 "--"
 msgstr ""
 
