--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-01 02:19+0000\n"
+"POT-Creation-Date: 2021-09-03 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -81,6 +81,7 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:20
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:137
+#: upstream/_generated-config/main/config/quarkus-liquibase.adoc:272
 #, no-wrap
 msgid "`db/changeLog.xml`"
 msgstr ""
@@ -117,7 +118,6 @@ msgstr "boolean"
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:155
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:173
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:281
-#: upstream/_generated-config/main/config/quarkus-liquibase.adoc:290
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:299
 #, no-wrap
 msgid "`false`"
@@ -138,6 +138,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:38
 #: upstream/_generated-config/main/config/quarkus-liquibase.adoc:164
+#: upstream/_generated-config/main/config/quarkus-liquibase.adoc:290
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -483,14 +484,8 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The change log file\n"
 "--"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-liquibase.adoc:272
-#, no-wrap
-msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
 
 #. type: Table
@@ -501,7 +496,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The migrate at start flag\n"
 "--"
 msgstr ""
 
@@ -513,7 +508,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The validate on update flag\n"
 "--"
 msgstr ""
 
@@ -525,7 +520,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The clean at start flag\n"
 "--"
 msgstr ""
 
@@ -537,7 +532,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The list of contexts\n"
 "--"
 msgstr ""
 
@@ -549,7 +544,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The list of labels\n"
 "--"
 msgstr ""
 
@@ -561,7 +556,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The default catalog name\n"
 "--"
 msgstr ""
 
@@ -573,7 +568,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The default schema name\n"
 "--"
 msgstr ""
 
@@ -585,7 +580,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables catalog name\n"
 "--"
 msgstr ""
 
@@ -597,7 +592,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables schema name\n"
 "--"
 msgstr ""
 
@@ -609,7 +604,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The liquibase tables tablespace name\n"
 "--"
 msgstr ""
 
@@ -621,6 +616,6 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The parameters to be passed to the changelog. Defined as key value pairs.\n"
 "--"
 msgstr ""
