--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-01 02:19+0000\n"
+"POT-Creation-Date: 2021-09-03 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"\n"
+"The change log file\n"
 "--"
 msgstr ""
 
@@ -60,5 +60,5 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-liquibase-mongodb-liquibase-mongodb-build-time-config.adoc:19
 #, no-wrap
-msgid "required icon:exclamation-circle[title=Configuration property is required]"
+msgid "`db/changeLog.xml`"
 msgstr ""
